<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="radio.alarm.Index">
    <item
        android:id="@+id/radio"
        android:orderInCategory="100"
        android:icon="@drawable/list"
        app:showAsAction="always"
        android:title="@string/radio"
        />
    <item
        android:id="@+id/country"
        android:orderInCategory="110"
        android:title="@string/country"
        />
    <item
        android:id="@+id/share"
        android:orderInCategory="110"
        android:title="@string/share"
        />
    <item
        android:id="@+id/comment"
        android:orderInCategory="120"
        android:title="@string/comment"
        />
    <item
        android:id="@+id/disableNot"
        android:orderInCategory="130"
        android:title="@string/disable_notification"
        />
</menu>
